date picker alignment fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -194,3 +194,7 @@ label {
 .p-datepicker table td > span.p-highlight, .p-datepicker table td.p-datepicker-today > span.p-highlight {
   color: $primaryColor;
 }
+
+.datetimepicker {
+  z-index: 100;
+}
